--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url('https://fonts.googleapis.com/css?family=Lora&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 body {
-    font-family: "Lora", sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 
 ::-webkit-scrollbar {
@@ -23,5 +23,5 @@ body {
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background-color: #ea580c;
+    background-color: white;
 }
